# FinalDeploymentData433

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  contribution_log.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  legacy_requirements.txt  legacy_streamlit_app.py  pyproject.toml
backend/app/: deps.py  limiter.py  main.py  schemas.py  security.py  settings.py
backend/app/ml/: corpus.py  model.py  tmdb.py
backend/app/routers/: favorites.py  health.py  recommend.py  search.py  trending.py
backend/tests/: conftest.py  test_health.py  test_model.py  test_recommend.py  test_search.py  test_security.py
docs/: ai-usage.md  architecture.md  cost.md  data.md  deployment.md  model.md  security.md
docs/handoff/: CineMatch_Context.md  CineMatch_Milestone5_Plan.md
frontend/: .env.example  .eslintrc.json  .npmrc  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/login/: page.tsx
frontend/app/recommend/[movieId]/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  HeaderAuthButtons.tsx  MovieCard.tsx  MovieHero.tsx  RecommendationGrid.tsx  SearchBar.tsx
frontend/lib/: api.ts  sanitize.ts
frontend/lib/supabase/: server.ts
presentation/: cinematch_milestone5.pptx
scripts/: evalmodel.py  generate_deck.js
supabase/migrations/: 0001_init.sql
